--- a/views/partials/categories-examples.ejs
+++ b/views/partials/categories-examples.ejs
@@ -14,11 +14,15 @@
         <i class="fas fa-tooth"></i>
         <p class="icon-txt">Odontologos/as</p>
     </article>
+
     <article class="icon-article">
-        <!-- plomeria -->
-        <i class="fas fa-faucet"></i>
-        <p class="icon-txt">Plomeros/as</p>
+        <a href="professionals">
+            <!-- plomeria -->
+            <i class="fas fa-faucet"></i>
+            <p class="icon-txt">Plomeros/as</p>
+        </a>
     </article>
+
     <article class="icon-article">
         <!-- carpinteria -->
         <i class="fas fa-hammer"></i>
