--- a/views/professionals.ejs
+++ b/views/professionals.ejs
@@ -1,3 +1,6 @@
+<!-- PAGINA EN DESARROLLO, no entregable aun -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,7 +26,7 @@
     <%- include("./partials/nav-bar") %>
 
       <main>
-        <p class="title-cart">Reservas por Confirmar</p>
+        <p class="title-cart">Plomeros</p>
         <!-- <i class="fas fa-trash-alt"></i> -->
         <div class="top-flex-mobile">
           <div class="div-avatar">
@@ -32,12 +35,12 @@
             </div>
           </div>
           <div class="div-descrption">
-            <div class="title-per-device-productCart">Odontologo:</div>
-            <div class="name-per-device-productCart">"Mario Corona"</div>
+            <div class="title-per-device-productCart">Plomero:</div>
+            <div class="name-per-device-productCart">"Mario Bros"</div>
             <!--el nombre cambia segun el profesonial  -->
           </div>
           <div class="reserved-date">
-            <p>05/08/21</p>
+            <p>Lu-Ju-Sa</p>
             <p>T. Mañana</p>
           </div>
           <div class="price-button-preview">
@@ -58,12 +61,12 @@
             </div>
           </div>
           <div class="div-descrption">
-            <div class="title-per-device-productCart">Odontologo:</div>
-            <div class="name-per-device-productCart">"Mario Corona"</div>
+            <div class="title-per-device-productCart">Plomero:</div>
+            <div class="name-per-device-productCart">"Bob el Constructor"</div>
             <!--el nombre cambia segun el profesonial  -->
           </div>
           <div class="reserved-date">
-            <p>05/08/21</p>
+            <p>Ma-Vi</p>
             <p>T. Mañana</p>
           </div>
           <div class="price-button-preview">
@@ -84,13 +87,13 @@
             </div>
           </div>
           <div class="div-descrption">
-            <div class="title-per-device-productCart">Odontologo:</div>
-            <div class="name-per-device-productCart">"Mario Corona"</div>
+            <div class="title-per-device-productCart">Plomero:</div>
+            <div class="name-per-device-productCart">"Luigi Bros"</div>
             <!--el nombre cambia segun el profesonial  -->
           </div>
           <div class="reserved-date">
-            <p>05/08/21</p>
-            <p>T. Mañana</p>
+            <p>Ju-Sa</p>
+            <p>T. Tarde</p>
           </div>
           <div class="price-button-preview">
             <div class="price-preview">
@@ -110,12 +113,12 @@
             </div>
           </div>
           <div class="div-descrption">
-            <div class="title-per-device-productCart">Odontologo:</div>
-            <div class="name-per-device-productCart">"Mario Corona"</div>
+            <div class="title-per-device-productCart">Plomero:</div>
+            <div class="name-per-device-productCart">"Los Magios"</div>
             <!--el nombre cambia segun el profesonial  -->
           </div>
           <div class="reserved-date">
-            <p>05/08/21</p>
+            <p>Lu-Ma-Sa</p>
             <p>T. Mañana</p>
           </div>
           <div class="price-button-preview">
