--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -19,6 +19,33 @@
 
   <%- include("../partials/header") %>
 
+    <nav class="nav-login">
+      <section class="categories">
+        <div>
+          <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
+        </div>
+        <div class="prof-zona">
+          <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
+          <!-- ocultar boton en mobile, mostrar en el resto -->
+        </div>
+      </section>
+      <div class="login">
+        <a href="../login">
+          <p class="txt-ingresar">Ingresar</p>
+        </a>
+        <div>
+          <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
+
+          <!-- ocultar txt en mobile, mostrar en el resto -->
+        </div>
+
+        <div class="cart">
+          <a href="../productCart"><i class="fas fa-shopping-cart"></i></a>
+          <i class="fas fa-chevron-down"></i>
+        </div>
+      </div>
+    </nav>
+
     <main>
       <div class="allProduct">
         <div class="prof-title-father">
