--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -17,201 +17,202 @@
 <body>
 
   <%- include("../partials/header") %>
+    <%- include("../partials/nav-bar") %>
 
-    <main>
-      <div class="all-registerProf">
-        <form action="" method="" class="prof-form">
-          <div class="registerInput">
-            <label for="nombre">Nombre y Apellido:
-              <input type="text" name="name" id="nombre" placeholder="Ej: Cosme Fulanito">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="email">Email:
-              <input type="email" name="email" id="email">
-            </label>
-          </div>
-          <div class="registerInput localidad-list">
-            <label>Localidad
-              <select name="localidad">
-                <option value="Capital Federal" selected>Capital Federal</option>
-                <option value="Conurbano">Conurbano</option>
-                <option value="Interior">Interior</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="adress">Dirección:
-              <input type="text" name="adress" id="adress" placeholder="Ej: Calle falsa 123 2A">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="tel">Telefono:
-              <input type="number" name="tel" id="tel" placeholder="Ej: 011-12345678">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="tel2">Telefono 2 (Opcional):
-              <input type="number" name="tel2" id="tel2" placeholder="Ej: 011-12345678">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="dni">DNI (Sin Puntos):
-              <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="cuit">CUIT (Sin Puntos ni Guiones):
-              <input type="cuit" name="cuit" id="cuit" placeholder="Clave Unica de Identificacion Tributaria">
-            </label>
-          </div>
-          <div class="registerInput profesiones-list">
-            <label>Profesiones:
-              <select name="profesiones">
-                <option value="carpenter" selected>Carpintero/a</option>
-                <option value="plumber">Plomero/a</option>
-                <option value="painter">Pintor/a</option>
-                <option value="electrician">Electricista</option>
-                <option value="odontologo">Odontologo/a</option>
-                <option value="mechanic">Mecanico/a</option>
-                <option value="other">Otro</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="other-prof">Profesión (En Caso de No Estar Listada):
-              <input type="text" name="other-prof" id="other-prof" placeholder="Ej: Programador WEB Full Stack">
-            </label>
-          </div>
-          <div class="registerInput expirience-list">
-            <label>Años de Experiencia:
-              <select name="expirience">
-                <option value="under-1" selected>Menor a 1 Año</option>
-                <option value="1-3">Entre 1 y 3 Años</option>
-                <option value="3-5">Entre 3 y 5 Años</option>
-                <option value="5-ttre">Mayor a 5 Años</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput expirience-list">
-            <label>Posee Matricula:
-              <select name="expirience">
-                <option value="yes" selected>Si</option>
-                <option value="no">No</option>
-                <option value="na">N/A</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="matricula">Matricula (en Caso de Aplicar):
-              <input type="number" name="matricula" id="matricula">
-            </label>
-          </div>
-          <div class="registerInput localidad-list">
-            <label>Zona de Prestacion de Servicio:
-              <select name="localidad">
-                <option value="Capital Federal" selected>Capital Federal</option>
-                <option value="Conurbano">Conurbano</option>
-                <option value="Interior">Interior</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput team-list">
-            <label>Posee Equipo de Trabajo?
-              <select name="team">
-                <option value="yes" selected>Si</option>
-                <option value="no">No</option>
-                <option value="maybe">Depende</option>
-              </select>
-            </label>
-          </div>
-          <div class="registerInput tool-list">
-            <label>Lleva sus Propias Herramientas?
-              <select name="tool">
-                <option value="yes" selected>Si</option>
-                <option value="no">No</option>
-                <option value="maybe">Depende</option>
-              </select>
-            </label>
-          </div>
-          <div class="dispo-dias">
-            <p>Dias de Prestacion de Servicio:</p>
-            <p>Lunes<label>(9-12am)</label><input type="checkbox" name="dias" value="lunes-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="lunes-tt" selected>
-              </option>
-            </p>
-            <p>Martes<label>(9-12am)</label><input type="checkbox" name="dias" value="martes-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="martes-tt" selected>
-              </option>
-            </p>
-            <p>Miercoles<label>(9-12am)</label><input type="checkbox" name="dias" value="miercoles-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="miercoles-tt" selected>
-              </option>
-            </p>
-            <p>Jueves<label>(9-12am)</label><input type="checkbox" name="dias" value="jueves-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="jueves-tt" selected>
-              </option>
-            </p>
-            <p>Viernes<label>(9-12am)</label><input type="checkbox" name="dias" value="viernes-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="viernes-tt" selected>
-              </option>
-            </p>
-            <p>Sabado<label>(9-12am)</label><input type="checkbox" name="dias" value="sabado-tm" selected>
-              </option>
-              <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="sabado-tt" selected>
-              </option>
-            </p>
+      <main>
+        <div class="all-registerProf">
+          <form action="" method="" class="prof-form">
+            <div class="registerInput">
+              <label for="nombre">Nombre y Apellido:
+                <input type="text" name="name" id="nombre" placeholder="Ej: Cosme Fulanito">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="email">Email:
+                <input type="email" name="email" id="email">
+              </label>
+            </div>
+            <div class="registerInput localidad-list">
+              <label>Localidad
+                <select name="localidad">
+                  <option value="Capital Federal" selected>Capital Federal</option>
+                  <option value="Conurbano">Conurbano</option>
+                  <option value="Interior">Interior</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="adress">Dirección:
+                <input type="text" name="adress" id="adress" placeholder="Ej: Calle falsa 123 2A">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="tel">Telefono:
+                <input type="number" name="tel" id="tel" placeholder="Ej: 011-12345678">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="tel2">Telefono 2 (Opcional):
+                <input type="number" name="tel2" id="tel2" placeholder="Ej: 011-12345678">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="dni">DNI (Sin Puntos):
+                <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="cuit">CUIT (Sin Puntos ni Guiones):
+                <input type="cuit" name="cuit" id="cuit" placeholder="Clave Unica de Identificacion Tributaria">
+              </label>
+            </div>
+            <div class="registerInput profesiones-list">
+              <label>Profesiones:
+                <select name="profesiones">
+                  <option value="carpenter" selected>Carpintero/a</option>
+                  <option value="plumber">Plomero/a</option>
+                  <option value="painter">Pintor/a</option>
+                  <option value="electrician">Electricista</option>
+                  <option value="odontologo">Odontologo/a</option>
+                  <option value="mechanic">Mecanico/a</option>
+                  <option value="other">Otro</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="other-prof">Profesión (En Caso de No Estar Listada):
+                <input type="text" name="other-prof" id="other-prof" placeholder="Ej: Programador WEB Full Stack">
+              </label>
+            </div>
+            <div class="registerInput expirience-list">
+              <label>Años de Experiencia:
+                <select name="expirience">
+                  <option value="under-1" selected>Menor a 1 Año</option>
+                  <option value="1-3">Entre 1 y 3 Años</option>
+                  <option value="3-5">Entre 3 y 5 Años</option>
+                  <option value="5-ttre">Mayor a 5 Años</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput expirience-list">
+              <label>Posee Matricula:
+                <select name="expirience">
+                  <option value="yes" selected>Si</option>
+                  <option value="no">No</option>
+                  <option value="na">N/A</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="matricula">Matricula (en Caso de Aplicar):
+                <input type="number" name="matricula" id="matricula">
+              </label>
+            </div>
+            <div class="registerInput localidad-list">
+              <label>Zona de Prestacion de Servicio:
+                <select name="localidad">
+                  <option value="Capital Federal" selected>Capital Federal</option>
+                  <option value="Conurbano">Conurbano</option>
+                  <option value="Interior">Interior</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput team-list">
+              <label>Posee Equipo de Trabajo?
+                <select name="team">
+                  <option value="yes" selected>Si</option>
+                  <option value="no">No</option>
+                  <option value="maybe">Depende</option>
+                </select>
+              </label>
+            </div>
+            <div class="registerInput tool-list">
+              <label>Lleva sus Propias Herramientas?
+                <select name="tool">
+                  <option value="yes" selected>Si</option>
+                  <option value="no">No</option>
+                  <option value="maybe">Depende</option>
+                </select>
+              </label>
+            </div>
+            <div class="dispo-dias">
+              <p>Dias de Prestacion de Servicio:</p>
+              <p>Lunes<label>(9-12am)</label><input type="checkbox" name="dias" value="lunes-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="lunes-tt" selected>
+                </option>
+              </p>
+              <p>Martes<label>(9-12am)</label><input type="checkbox" name="dias" value="martes-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="martes-tt" selected>
+                </option>
+              </p>
+              <p>Miercoles<label>(9-12am)</label><input type="checkbox" name="dias" value="miercoles-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="miercoles-tt" selected>
+                </option>
+              </p>
+              <p>Jueves<label>(9-12am)</label><input type="checkbox" name="dias" value="jueves-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="jueves-tt" selected>
+                </option>
+              </p>
+              <p>Viernes<label>(9-12am)</label><input type="checkbox" name="dias" value="viernes-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="viernes-tt" selected>
+                </option>
+              </p>
+              <p>Sabado<label>(9-12am)</label><input type="checkbox" name="dias" value="sabado-tm" selected>
+                </option>
+                <label>(1pm-5pm)</label><input type="checkbox" name="dias" value="sabado-tt" selected>
+                </option>
+              </p>
 
-          </div>
+            </div>
 
-          <div class="registerInput whyme">
-            <label for="whyme">Porque Deberian Elegirte?
-              <textarea name="whyme" id="whyme" placeholder="Max 600 Caracteres"></textarea>
-            </label>
-          </div>
-          <div class="registerInput avatar">
-            <label for="avatar">Foto de Perfil
-              <input type="file" name="avatar" accept=".jpg, .png, .bmp">
-            </label>
-          </div>
-          <div class="registerInput jobs">
-            <label for="jobs">Fotos de Trabajos Realizados (max 10)
-              <input type="file" name="jobs" accept=".jpg, .png, .bmp" multiple>
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="cbu">N° de CBU/CVU (para deposito de reservas):
-              <input type="number" name="cbu" id="cbu">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="password">Contraseña:
-              <input type="password" name="password" id="password">
-            </label>
-          </div>
-          <div class="registerInput">
-            <label for="passwordConfirm">Confirmar Contraseña:
-              <input type="password" name="passwordConfirm" id="passwordConfirm">
-            </label>
-          </div>
-          <div class="confirm-button">
-            <button type="submit">Crear</button>
-          </div>
-      </div>
-      </form>
-      </div>
-      </section>
+            <div class="registerInput whyme">
+              <label for="whyme">Porque Deberian Elegirte?
+                <textarea name="whyme" id="whyme" placeholder="Max 600 Caracteres"></textarea>
+              </label>
+            </div>
+            <div class="registerInput avatar">
+              <label for="avatar">Foto de Perfil
+                <input type="file" name="avatar" accept=".jpg, .png, .bmp">
+              </label>
+            </div>
+            <div class="registerInput jobs">
+              <label for="jobs">Fotos de Trabajos Realizados (max 10)
+                <input type="file" name="jobs" accept=".jpg, .png, .bmp" multiple>
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="cbu">N° de CBU/CVU (para deposito de reservas):
+                <input type="number" name="cbu" id="cbu">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="password">Contraseña:
+                <input type="password" name="password" id="password">
+              </label>
+            </div>
+            <div class="registerInput">
+              <label for="passwordConfirm">Confirmar Contraseña:
+                <input type="password" name="passwordConfirm" id="passwordConfirm">
+              </label>
+            </div>
+            <div class="confirm-button">
+              <button type="submit">Crear</button>
+            </div>
+        </div>
+        </form>
+        </div>
+        </section>
 
-      <%- include("../partials/ad-bottom-body") %>
+        <%- include("../partials/ad-bottom-body") %>
 
-    </main>
+      </main>
 
-    <%- include("../partials/footer") %>
+      <%- include("../partials/footer") %>
 
 </body>
 
