--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,30 +18,31 @@
 <body>
 
   <%- include("../partials/header") %>
+    <%- include("../partials/nav-bar") %>
 
-    <main>
-      <form action="" method="" class="form-login">
-        <div class="username">
-          <label for="username">Nombre de Usuario:</label>
-          <input type="text" name="username" id="username">
+      <main>
+        <form action="" method="" class="form-login">
+          <div class="username">
+            <label for="username">Nombre de Usuario:</label>
+            <input type="text" name="username" id="username">
+          </div>
+          <div class="password">
+            <label for="password">Contraseña:</label>
+            <input type="password" name="password" id="password">
+          </div>
+          <div class="login-button">
+            <button type="submit">Enviar</button>
+          </div>
+        </form>
+        <div class="password-forgotten">
+          <a href="">¿Olvidaste la Contraseña?</a>
         </div>
-        <div class="password">
-          <label for="password">Contraseña:</label>
-          <input type="password" name="password" id="password">
-        </div>
-        <div class="login-button">
-          <button type="submit">Enviar</button>
-        </div>
-      </form>
-      <div class="password-forgotten">
-        <a href="">¿Olvidaste la Contraseña?</a>
-      </div>
 
-      <%- include("../partials/ad-bottom-body") %>
+        <%- include("../partials/ad-bottom-body") %>
 
-    </main>
+      </main>
 
-    <%- include("../partials/footer") %>
+      <%- include("../partials/footer") %>
 
 </body>
 
