--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/css/tablet.css" />
     <link rel="stylesheet" href="/css/desktop-index.css" />
     <link rel="stylesheet" href="/css/registerProf.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Soluciones Profesionales</title>
 </head>
 
@@ -68,6 +71,7 @@
             </div>
             <div class="registerInput profesiones-list">
               <label>Profesiones:
+                <!-- class="selectpicker" multiple -->
                 <select name="profesiones">
                   <option value="carpenter" selected>Carpintero/a</option>
                   <option value="plumber">Plomero/a</option>
