--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,8 @@
             <p><i class="fas fa-ellipsis-h"></i></p>
           </div>
           <div class="work-with-us-button">
-            <a href="registerProf"><button type="submit">Sumáte a Nuestro Equipo de Profesionales</button></a>
+            <a href="/professionals/registerProf"><button type="submit">Sumáte a Nuestro Equipo de
+                Profesionales</button></a>
           </div>
           <h3 class="title-categories">Categorias mas Solicitadas</h3>
           <%- include("./partials/categories-examples") %>
