--- a/views/partials/categories-examples.ejs
+++ b/views/partials/categories-examples.ejs
@@ -1,18 +1,24 @@
 <section class="icon-categories">
     <article class="icon-article">
-        <!-- mecanica auto -->
-        <i class="fas fa-wrench"></i>
-        <p class="icon-txt">Mecanicos/as</p>
+        <a href="professionals">
+            <!-- mecanica auto -->
+            <i class="fas fa-wrench"></i>
+            <p class="icon-txt">Mecanicos/as</p>
+        </a>
     </article>
     <article class="icon-article">
-        <!-- electricista -->
-        <i class="fas fa-plug"></i>
-        <p class="icon-txt">Electricistas</p>
+        <a href="professionals">
+            <!-- electricista -->
+            <i class="fas fa-plug"></i>
+            <p class="icon-txt">Electricistas</p>
+        </a>
     </article>
     <article class="icon-article">
-        <!-- dentistas -->
-        <i class="fas fa-tooth"></i>
-        <p class="icon-txt">Odontologos/as</p>
+        <a href="professionals">
+            <!-- dentistas -->
+            <i class="fas fa-tooth"></i>
+            <p class="icon-txt">Odontologos/as</p>
+        </a>
     </article>
 
     <article class="icon-article">
@@ -24,14 +30,18 @@
     </article>
 
     <article class="icon-article">
-        <!-- carpinteria -->
-        <i class="fas fa-hammer"></i>
-        <p class="icon-txt">Carpinteros/as/
-        <p>
+        <a href="professionals">
+            <!-- carpinteria -->
+            <i class="fas fa-hammer"></i>
+            <p class="icon-txt">Carpinteros/as/
+                <p>
+        </a>
     </article>
     <article class="icon-article">
-        <!-- pintores -->
-        <i class="fas fa-paint-roller"></i>
-        <p class="icon-txt">Pintores/as</p>
+        <a href="professionals">
+            <!-- pintores -->
+            <i class="fas fa-paint-roller"></i>
+            <p class="icon-txt">Pintores/as</p>
+        </a>
     </article>
 </section>
