--- a/views/users/registerClient.ejs
+++ b/views/users/registerClient.ejs
@@ -22,8 +22,13 @@
       <main>
         <form action="" method="" class="clientForm">
           <div class="registerInput">
-            <label for="nombre">Nombre y Apellido:
-              <input type="text" name="name" id="nombre" placeholder="Cosme Fulanito">
+            <label for="first-name">Nombre:
+              <input type="text" name="first-name" id="first-nombre" placeholder="Ej: Cosme">
+            </label>
+          </div>
+          <div class="registerInput">
+            <label for="last-name">Apellido:
+              <input type="text" name="last-name" id="last-name" placeholder="Ej: Fulanito">
             </label>
           </div>
           <div class="registerInput">
@@ -48,6 +53,11 @@
           <div class="registerInput">
             <label for="dni">DNI:
               <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad">
+            </label>
+          </div>
+          <div class="registerInput avatar">
+            <label for="avatar">Foto de Perfil
+              <input type="file" name="avatar" accept=".jpg, .png, .bmp">
             </label>
           </div>
           <div class="registerInput">
