--- a/views/professionals.ejs
+++ b/views/professionals.ejs
@@ -26,7 +26,7 @@
     <%- include("./partials/nav-bar") %>
 
       <main>
-        <p class="title-cart">Plomeros</p>
+        <p class="title-cart">Profesionales</p>
         <!-- <i class="fas fa-trash-alt"></i> -->
         <div class="top-flex-mobile">
           <div class="div-avatar">
