agregado las pag editProf, profPerRubro, rubros y las rutas-control q les compete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,8 @@
             <p><i class="fas fa-ellipsis-h"></i></p>
           </div>
           <div class="work-with-us-button">
-            <a href="/professionals/registerProf"><button type="submit">Sumáte a Nuestro Equipo de
+            <!-- href URL (no ruta de carpeta) -->
+            <a href="/rubros/registerProf"><button type="submit">Sumáte a Nuestro Equipo de
                 Profesionales</button></a>
           </div>
           <h3 class="title-categories">Categorias mas Solicitadas</h3>
