--- a/views/partials/categories-examples.ejs
+++ b/views/partials/categories-examples.ejs
@@ -1,47 +1,139 @@
 <section class="icon-categories">
     <article class="icon-article">
-        <a href="professionals">
-            <!-- mecanica auto -->
+        <!-- meter if en los links para /rubros/plomero o /dentista -->
+        <a href="rubros/Mecanico">
+            <!-- mecanica auto 1-->
             <i class="fas fa-wrench"></i>
             <p class="icon-txt">Mecanicos/as</p>
         </a>
     </article>
     <article class="icon-article">
-        <a href="professionals">
-            <!-- electricista -->
+        <a href="rubros/Electricista">
+            <!-- electricista 2-->
             <i class="fas fa-plug"></i>
             <p class="icon-txt">Electricistas</p>
         </a>
     </article>
     <article class="icon-article">
-        <a href="professionals">
-            <!-- dentistas -->
+        <a href="rubros/Odontologo">
+            <!-- dentistas 3-->
             <i class="fas fa-tooth"></i>
             <p class="icon-txt">Odontologos/as</p>
         </a>
     </article>
 
     <article class="icon-article">
-        <a href="professionals">
-            <!-- plomeria -->
+        <a href="rubros/Plomero">
+            <!-- plomeria 4-->
             <i class="fas fa-faucet"></i>
             <p class="icon-txt">Plomeros/as</p>
         </a>
     </article>
 
     <article class="icon-article">
-        <a href="professionals">
-            <!-- carpinteria -->
+        <a href="rubros/Carpintero">
+            <!-- carpinteria 5-->
             <i class="fas fa-hammer"></i>
             <p class="icon-txt">Carpinteros/as/
                 <p>
         </a>
     </article>
     <article class="icon-article">
-        <a href="professionals">
-            <!-- pintores -->
+        <a href="rubros/Pintor">
+            <!-- pintores 6-->
             <i class="fas fa-paint-roller"></i>
             <p class="icon-txt">Pintores/as</p>
         </a>
     </article>
+    <!--     7<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-gavel"></i>
+            <p class="icon-txt">Abogados/as</p>
+        </a>
+    </article> -->
+    <!--     8<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-laptop-code"></i>
+            <p class="icon-txt">Full Stack Web Dev</p>
+        </a>
+    </article> -->
+    <!--     9<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-burn"></i>
+            <p class="icon-txt">Gasistas</p>
+        </a>
+    </article> -->
+    <!--     10<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-sink"></i>
+            <p class="icon-txt">Destapadores/as</p>
+        </a>
+    </article> -->
+    <!--     11<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-utensils"></i>
+            <p class="icon-txt">Catering</p>
+        </a>
+    </article> -->
+    <!--     12<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-scroll"></i>
+            <p class="icon-txt">Empapeladores/as</p>
+        </a>
+    </article> -->
+    <!--     13<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-cannabis"></i>
+            <p class="icon-txt">Traficantes</p>
+        </a>
+    </article> -->
+    <!--     14<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-wind"></i>
+            <p class="icon-txt">instaladores de AC</p>
+        </a>
+    </article> -->
+    <!--     15<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-people-carry"></i>
+            <p class="icon-txt">Mudanzas</p>
+        </a>
+    </article> -->
+    <!--     16<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-bug"></i>
+            <p class="icon-txt">Fumigadores/as</p>
+        </a>
+    </article> -->
+    <!--     17<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-chalkboard-teacher"></i>
+            <p class="icon-txt">Prof. Particulares</p>
+        </a>
+    </article> -->
+    <!--     17<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-chalkboard-teacher"></i>
+            <p class="icon-txt">Prof. Particulares</p>
+        </a>
+    </article> -->
+    <!--     18<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-paw"></i>
+            <p class="icon-txt">Paseadores/as</p>
+        </a>
+    </article> -->
+    <!--     19<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-swimming-pool"></i>
+            <p class="icon-txt">Pileteros/as</p>
+        </a>
+    </article> -->
+    <!--     20<article class="icon-article">
+        <a href="professionals">
+            <i class="fas fa-seedling"></i>
+            <p class="icon-txt">Jardineros/as</p>
+        </a>
+    </article> -->
+
 </section>
