--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,7 +1,9 @@
 <nav class="nav-login">
     <section class="categories">
-        <div>
-            <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
+        <div class="rubros">
+            <a href="rubros">
+                <p>RUBROS <i class="fas fa-chevron-down"></i></p>
+            </a>
         </div>
         <div class="prof-zona">
             <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
