--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -24,7 +24,7 @@
 
       <main>
         <div class="all-registerProf">
-          <form action="" method="" class="prof-form">
+          <form action="/rubros/registerProf" method="POST" class="prof-form">
             <div class="registerInput">
               <label for="first-name">Nombre:
                 <input type="text" name="first-name" id="first-nombre" placeholder="Ej: Cosme">
